src/assets/styles.css
/* If data attribute is applied, override Swal's styles to prevent layout shift */
body[data-welcome-back] {
	padding-right: 0 !important;
	overflow: initial !important;
}

/*
Hiding the Swal container is important to preventing the fade-out animation.
Note: using display:none prevents Swal.close() or Swal.clickConfirm() from
completing, and visibility:hidden is not effective in this case.  So instead
we hide the element off-screen when the duration has not been met.
*/
body[data-welcome-back] .swal2-container {
	position: absolute;
	left: -10000px;
}

